@startuml
title Class Diagram[jsgame]

entity "KeyInput" {
	{field}  - static boolean{} : input
	{field}  - static String{} : keys
	{method} - void : setEventListener()
}
entity "Main" {
	{method} + void : addEventListener('load', ())
	{method} + void : mainLoop()
}
entity "Preloader" {
	{field}  - Promise[] : #preloadPromises
	{method} + void : constructor(_assets...)
	{method} + void : executeWhenComp(callback)
}
entity "MyCanvas" {
	{method} + void : setup(width, height)
}
entity "Controler" {
	{method} + void : update()
}
entity "Model" {
	{method} + void : execute()		
}
entity "Renderer" {
	{field}  - static Canvas : canvas
	{method} + void : update()
	{method} - void : #addResizeEvent()
	{method} - void : #initRender()
	{method} - abstract void : #mainRender()
}
entity "Sounds" {
	{field}  - static Sound{filePath, sound} : sounds
	{method} + void : add(filePath, sound)
	{method} + Sound : get(filePath)
}
entity "Sound" {
	{method} + Sound : constructor(src)
	{method} + Sound : start()
	{method} + Sound : loop()
	{method} + Sound : stop()
}
entity "Audio" {
}
entity "Scenes" {
	{field}  - Scene : scenes[]
	{method} + void : switchScene(name)
	{method} + void : addScene(name, scene)
	{method} + Scene : getCurrentScene()
}
entity "Scene" {
	{method} + Scene : constructor()
	{method} + void : add(obj)
	{method} + void : update(canvas)
	{method} + void : onenterframe()
	{method} + void : onchangescene()
}
entity "Text" {
	{method} + Text : constructor()
	{method} + Text : center()
	{method} + Text : middle()
	{method} + void : update( canvas )
	{method} + void : render( canvas, ctx )
	{method} + void : onenterframe()
}

Main ..> Controler
Controler ..> Model
Controler ..> Renderer
Main ..> Preloader
Preloader ..> Sounds
Sound *.. Sounds
Audio <|.. Sound
Scenes *.. Scene 
Scene *.. Text
Scene *.. TextBox
Model <|.. StartModel
Model <|.. BattleModel
Renderer <|.. StartRenderer
Renderer <|.. BattleRenderer
@enduml
